fix credential attributes in credentialSubject
